--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-
-node_modules/.cache/default-development/1.pack
-node_modules/.cache/default-development/2.pack
-node_modules/.cache/default-development/index.pack
-node_modules/.cache/default-development/index.pack.old
+node_modules
